# practice_tensorrt

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
OnnxMNIST/: CMakeLists.txt  bufferManager.h  sampleOnnx.cpp
apps/BuildOnly/: CMakeLists.txt  InputOnnxList.txt  benchmark.cpp  buildOnly.cpp  main.cpp
apps/BuildOnly/scripts/: gen_backbone_onnx.py
apps/MultiInput/: CMakeLists.txt  README.md  multiInput.cpp  multi_input.onnx  torch2onnx.py
apps/OnnxMNIST/: CMakeLists.txt  sampleOnnx.cpp
apps/deprecated/: taillight.cpp
apps/taillight/: CMakeLists.txt  TailRecogManager.cpp  TailRecogManager.hpp  config.toml  instance.cpp  main.cpp  taillight.cpp  taillight_bak.cpp
apps/taillight/infer-agents/: BaseInferAgent.hpp  CNN3DInferAgent.hpp
apps/taillight/scripts/: simple_vis.py
apps/taillight2/: RegressInferAgent.hpp  SimpleTracker.hpp  TailRecogManager.cpp  TrackedInst.hpp  common.cpp  common.hpp  instance.cpp  instance.hpp  main.cpp  preprocess_log.py
apps/taillight2/infer-agents/: BaseInferAgent.hpp  CNN3DInferAgent.hpp  RegressInferAgent.hpp  UNetInferAgent.hpp
apps/taillight2/scripts/: make_movie.py  preprocess_log.py  simple_vis.py
common/: common.h
include/trt_utils/: bufferManager.h  common.h
modules/taillight/: CMakeLists.txt
modules/taillight/include/taillight/: TailRecogManager.hpp  common.hpp  instance.hpp
modules/taillight/src/: TailRecogManager.cpp  instance.cpp
modules/taillight/src/infer-agents/: BaseInferAgent.hpp  CNN3DInferAgent.hpp  RegressInferAgent.hpp  UNetInferAgent.hpp
